--- a/css/main.css
+++ b/css/main.css
@@ -25,10 +25,17 @@ p {
     }
 }
 
-body {
+body, html {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+}
+
+#container {
   background-image: url('../img/pexels-lachlan-ross-5967940.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100%;
   padding: 20px;
   display:flex;
   flex-flow: column;
